# tvpvrd

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autoclean.sh  bootstrap-deb-README  bootstrap-deb.sh  bootstrap.sh  cntwc.sh  configure  configure.ac  configure.in  stdconfig.sh  upgrade.sh
bldscript/: bootstrap.sh  mkrelease.sh
docs/: Makefile.in  tvpvrd-db-grammar.rng
docs/manpages/: Makefile  Makefile.am  Makefile.in  tvpowerd.1.xml  tvpvrd.1  tvpvrd.1.html  tvpvrd.1.xml
profiles/: cropnormal.profile  high.profile  low.profile  normal.profile  thigh.profile  tlow.profile  tnormal.profile  wnormal.profile
profiles-avconv/: thigh.profile  tlow.profile
profiles.oldffmpeg/: thigh.profile  tnormal.profile
rpm-build/opensuse/: tvpvrd.spec
scripts/: Makefile.am  Makefile.in  README  deb.init.conf.tvpvrd  deb.init.d.tvpvrd  init.d.tvpvrd
scripts/pm/: 10tvpvrd  Makefile.am
src/: Makefile.am  Makefile.in  base64ed.c  config.h.in  datetimeutil.c  freqmap.c  freqmap.h  httpreq.c  httpreq.h  listhtml.c  listhtml.h  lockfile.c  lockfile.h  mailutil.c  mailutil.h  pcretvmalloc.c  quotprinted.c  recs.c  recs.h  rkey.c  stats.c  stats.h  transc.c  transc.h  transcprofile.c  transcprofile.h  tvcmd.c  tvcmd.h  tvconfig.c  tvconfig.h  tvhistory.c  tvhistory.h  tvhtml.c  tvhtml.h  tvpvrd.conf  tvpvrd.css  tvpvrd.h  tvpvrd_mobile.css  tvpvrsrv.c  tvshutdown.c  (+14 more)
src/etc/: README  mail_transcend.html  mail_transcend.txt  shutdown.sh.template  switchchannel.sh.template  tvpvrd.conf  tvpvrd.conf.full.template  tvpvrd.conf.full.template.in  tvpvrd.conf.simplified.template  tvpvrd.css  tvpvrd_metall.css  tvpvrd_mobile.css
src/etc/mail_templates/: mail_shutdown.html  mail_shutdown.txt  mail_transcend.html
src/etc/profiles/: thigh.profile
src/etc/profiles-avconv/: high.profile  tnormal.profile
src/etc/templates/: switchchannel.sh.template
src/etc/themes/: tvpvrd_deep.css  tvpvrd_grey.css  tvpvrd_hq.css  tvpvrd_metal.css  tvpvrd_metall.css  tvpvrd_mobile.css  tvpvrd_night.css  tvpvrd_plain.css
src/libiniparser/: Makefile.am
src/libsmtpmail/: README  base64ed.h  mailclientlib.c  mailclientlib.h  quotprinted.c
src/shell/: INSTALL  Makefile.am  README  tvpshell.c
src/tvpowerd/: Makefile.am  README  deb.init.d.tvpowerd  init.d.tvpowerd  install.sh.in  post-startup.sh  tvpowerd.c  tvpowerd.conf  uninstall.sh.in  wakelan.c  wakelan.h
tags/1.0.0/: ChangeLog
tags/1.0.0/src/: Makefile.am  Makefile.in  recs.h
tags/1.0.2/: ChangeLog  configure.in
tags/1.0.6/: configure  configure.in
tags/1.2.5/: configure
tags/1.2.7/: configure
tags/1.3.0/: configure.in
tags/1.3.7/: configure  configure.in
tags/1.4.0/: configure
tags/1.4.2/: configure  configure.in
tags/1.4.3/: configure
tags/1.4.4/: configure  configure.in
tags/1.4.7/: configure  configure.in
tags/1.4.8/: configure  configure.in
tags/1.4.9/: configure
tags/1.5.0/: ChangeLog
tags/1.5.4/: configure
tags/1.6.1/: configure  (+1 more)
tags/1.9.1/docs/manpages/: Makefile.am
tags/2.1.0/src/: Makefile.am  tvpvrd.h  tvpvrsrv.c  utils.h
tags/2.1.0/src/etc/: switchchannel.sh.template
tags/3.0.0alpha/src/libsmtpmail/: Makefile.am  mailclientlib.h
tags/3.0.2/: Makefile.am  NEWS  configure.ac
tags/3.0.2/src/: lockfile.h  tvcmd.c  tvconfig.c
tags/3.0.4/src/tvpowerd/: Makefile.am  tvpowerd.c
tags/4.4.2/scripts/pm/: Makefile.am  ivtv.config
tags/4.5.1/: AUTHORS  configure.ac
tags/4.5.1/bldscript/: bootstrap-deb-README  stdbuild.sh
tags/4.5.1/docs/manpages/: tvpowerd.1.html
tags/4.5.1/scripts/: Makefile.am
tags/4.5.1/src/: freqmap.c  futils.c  lockfile.c  mailutil.c  rkey.c  transcprofile.c  tvconfig.c  tvconfig.h  tvhtml.c  tvhtml.h  tvplog.c  tvshutdown.c  xstr.c  xstr.h
tags/4.5.1/src/etc/profiles/: normal.profile
tags/4.5.1/src/etc/themes/: tvpvrd_grey.css  tvpvrd_night.css
tags/4.5.1/src/libsmtpmail/: base64ed.c  mailclientlib.c  quotprinted.c
tags/4.5.1/src/tvpowerd/: tvpowerd.c
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  autoclean.sh  bootstrap-deb.sh  configure  configure.ac  configure.in  stdbuild.sh  svntag
trunk/bldscript/: mkcl.sh  mkrelease.sh  stdconfig.sh  upgrade.sh
trunk/docs/: Makefile.am  Makefile.in  tvpvrd-db-grammar.rng
trunk/docs/manpages/: Makefile.am  Makefile.in  tvpsh.1.html  tvpvrd.1  tvpvrd.1.html  tvpvrd.1.xml
trunk/profiles/: cropnormal.profile  high.profile  low.profile  mobile.profile  normal.profile  thigh.profile  tlow.profile  tnormal.profile  wnormal.profile
trunk/profiles-avconv/: tlow.profile  tnormal.profile
trunk/rpm-build/opensuse/: tvpvrd.spec
trunk/scripts/: Makefile.in  deb.init.conf.tvpvrd  init.d.tvpvrd  stop-tvpvrd
trunk/src/: Makefile.am  Makefile.in  base64ed.c  config.h.in  datetimeutil.c  datetimeutil.h  freqmap.c  freqmap.h  httpreq.c  httpreq.h  listhtml.c  listhtml.h  lockfile.c  lockfile.h  mailclientlib.c  mailclientlib.h  mailutil.c  pcretvmalloc.h  recs.c  recs.h  rkey.c  stats.c  stats.h  switchchannel.sh.template  transc.c  transc.h  transcprofile.c  transcprofile.h  tvcmd.c  tvcmd.h  tvconfig.c  tvconfig.h  tvhistory.c  tvhistory.h  tvhtml.c  tvhtml.h  tvplog.c  tvplog.h  tvppwrd.c  tvppwrd.conf  (+18 more)
trunk/src/etc/: README  mail_transcend.txt  shutdown.sh.template  startup.sh.template  tvpvrd.conf  tvpvrd.conf.full.template  tvpvrd.conf.simplified.template.in  tvpvrd.css  tvpvrd_metall.css  tvpvrd_mobile.css  tvpvrd_plain.css
trunk/src/etc/profiles/: tnormal.profile
trunk/src/etc/templates/: posttransc_processing.sh.template
trunk/src/etc/themes/: tvpvrd_deep.css  tvpvrd_grey.css  tvpvrd_hq.css  tvpvrd_metal.css  tvpvrd_mobile.css  tvpvrd_night.css  tvpvrd_plain.css
trunk/src/etc/xsl/: history.xsl
trunk/src/libiniparser/: Makefile.am  iniparser.c
trunk/src/libsmtpmail/: Makefile.am  mailclientlib.c  mailclientlib.h  quotprinted.c
trunk/src/shell/: INSTALL  Makefile.am  tvpshell.c
trunk/src/tvpowerd/: Makefile.am  README  install.sh.in  post-startup.sh  pre-shutdown.sh  tvpowerd.c  tvpowerd.conf  uninstall.sh.in  wakelan.c  wakelan.h
(+550 files in other folders)
